<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkblue"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/white"
                android:textSize="30sp"/>


        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:hint="@string/pass"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/white"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:textSize="30sp"/>

        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/white"
            android:background="@color/lblue"
            android:textAllCaps="false"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:gravity="right"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tvCreateaccount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/create"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:layout_weight="1"/>

        </LinearLayout>








    </LinearLayout>



</android.support.v7.widget.CardView>
