<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pls"
            android:textSize="20sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/darkblue">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pls"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:layout_marginLeft="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <ImageButton
                            android:id="@+id/ibPic"
                            android:layout_width="match_parent"
                            android:background="@drawable/picbackg"
                            android:layout_height="match_parent"
                            android:src="@drawable/maleperson"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/etFirstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="@string/FN"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_marginRight="55dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:textColorHint="@color/white"/>
                        <EditText
                            android:id="@+id/etSurname"
                            android:hint="@string/SN"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_marginRight="55dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:textColorHint="@color/white"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingRight="55dp">


                    <EditText
                        android:id="@+id/etPhone"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:hint="@string/phone"
                        android:textSize="20sp"
                        android:maxLength="11"
                        android:layout_marginTop="20dp"
                        android:textColorHint="@color/white"/>

                    <EditText
                        android:id="@+id/etEmail"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:textColor="@color/white"
                        android:hint="@string/email"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        android:textColorHint="@color/white"/>


                    <EditText
                        android:id="@+id/etUsername"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/person"
                        android:textColor="@color/white"
                        android:hint="@string/choose"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        android:textColorHint="@color/white"/>


                    <!--<Spinner
                        android:id="@+id/spGender"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@style/spinnerTheme"
                        android:backgroundTint="@color/white"
                        android:entries="@array/gender"

                        android:prompt="@string/Gender"

                        />-->





                    <!--<RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"

                        >


                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/male"
                                android:buttonTint="@color/white"
                                android:textSize="20sp"
                                android:textColor="@color/white"/>




                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:layout_weight="1"
                                android:text="@string/fem"
                                android:textSize="20sp"
                                android:textColor="@color/white"/>

                    </RadioGroup>-->

                    <EditText
                        android:id="@+id/etBirthDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/white"
                        android:hint="@string/bday"
                        android:textColorHint="@color/white"
                        android:inputType="date"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:drawableLeft="@drawable/gift"
                        android:drawablePadding="10dp"/>

                    <EditText
                        android:id="@+id/etLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/white"
                        android:hint="@string/loc"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:drawableLeft="@drawable/location"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="10dp"/>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white"
                        android:hint="@string/pass"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/white"
                            android:textSize="20sp"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/con"
                    android:textColor="@color/white"
                    android:layout_marginTop="30dp"
                    android:background="@color/lblue"
                    android:layout_marginHorizontal="20dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>


    